--- a/Documentation/Tex/TexFiles/InstructionManual.tex
+++ b/Documentation/Tex/TexFiles/InstructionManual.tex
@@ -1,5 +1,5 @@
-\include{./preamble}
-\begin{document}
+%\include{./preamble}
+%\begin{document}
 
 \chapter{Instruction Manual}
 
@@ -166,4 +166,4 @@ When viewing a movie, the administrator can check for possible review bombing fo
 The review bombing page shows some statistics about recent reviews made on a specific movie. An info box explains the meaning of each value
 
 
-\end{document}
+%\end{document}
