the final commit (merges do not count)

--- a/Documentation/Tex/TexFiles/Intruduction.tex
+++ b/Documentation/Tex/TexFiles/Intruduction.tex
@@ -11,5 +11,8 @@ Rotten Movies is a web service where users can keep track of the general liking 
 Guest users, as well as all others, can browse or search movies based on filters like: title, year of release and personnel who worked in it. They can also view a Hall of Fame for the most positive review genres, production houses and years in which the best movies were released.
 \paragraph{}
 For this project, the application has been developed in Java with the Spring framework and Thymeleaf as templating engine to implement a web GUI. The application uses a document database to store the main information about movies, users, reviews and personnel; a graph database is instead used to keep track of the relationship between normal users and top critics in terms of who follows who and between the movies and the users who reviewed it.
+
+All source files can be found in the public repository: \url{https://gitlab.com/ghi0m/rottenmovies}
+
 %\end{document}
 
