--- a/Documentation/Tex/TexFiles/preamble.tex
+++ b/Documentation/Tex/TexFiles/preamble.tex
@@ -204,3 +204,6 @@
     basicstyle=\footnotesize,
     emph={parent, groupId, artifactId,description, properties},
     emphstyle={\color{magenta}}}
+
+
+\usepackage{hyperref}
