--- a/Documentation/Tex/TexFiles/appendix.tex
+++ b/Documentation/Tex/TexFiles/appendix.tex
@@ -4,16 +4,16 @@
 
 \begin{alphasection}
 \section{Python Code}\label{sec:pycode}
-\subsection{Creation of one single dataset from the tsv imdb file}\label{subsec:datasetGeneratorImdb}
+\subsection{Creation of one single dataset from the tsv imdb files}\label{subsec:datasetGeneratorImdb}
 \lstinputlisting[language=Python]{./../code/datasetgenerator.py}
 
-\subsection{Creation of one single dataset from the csv kaggle file}\label{subsec:datasetGeneratorRotten}
+\subsection{Creation of one single dataset from the csv Kaggle files}\label{subsec:datasetGeneratorRotten}
 \lstinputlisting[language=Python]{./../code/rottengenerator.py}
 
-\subsection{Merging of the file generated in the previous script}\label{subsec:datasetMerge}
+\subsection{Merging of the files generated in the previous scripts}\label{subsec:datasetMerge}
 \lstinputlisting[language=Python]{./../code/mergeimdbrottendataset.py}
 
-\subsection{Collapsing different rows in a single one generating an array for personnel field}\label{subsec:datasetPersonnelCollapse}
+\subsection{Collapsing different rows into a single one by generating an array for personnel field}\label{subsec:datasetPersonnelCollapse}
 \lstinputlisting[language=Python]{./../code/personelljson.py}
 
 \subsection{Generates a hashed password for all the users}\label{subsec:createUserPassword}
@@ -26,7 +26,7 @@
 \subsection{Perform the escape on the string fields}\label{subsec:theOne}
 \lstinputlisting[language=JavaScript]{./../code/theOne.js}
 
-\subsection{Normalize the date field in the DB}\label{subsec:dateNormalization}
+\subsection{Normalize the date fields in the DB}\label{subsec:dateNormalization}
 \lstinputlisting[language=JavaScript]{./../code/dateNormalization.js}
 
 \subsection{Create a new collection for the user based on the data present in the movie collection}\label{subsec:userCreation}
